# Edge-viewer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgeviewerandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewerandroid/: MainActivity.kt
app/src/main/jni/: FrameProcessor.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgeviewerandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
